whitespace fix

--- a/final/styles/home-small.css
+++ b/final/styles/home-small.css
@@ -102,8 +102,14 @@ main {
 
 .featured-dishes img {
     width: 99%;
+    max-width: 99%;
+    display: block;
 }
 
+
+* {
+    outline: 1px solid red;
+}
 figcaption {
     text-align: center;
 }
@@ -140,9 +146,11 @@ footer {
     text-align: center;
 }
 
+
+
 .weatherForecast {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     text-align: center;
 
     padding: 10px;
@@ -250,15 +258,22 @@ header {
 }
 
 .visit-msg {
-  width: 100%;
+
   text-align: center;
+  box-sizing: border-box;
   padding: 1rem;
   font-weight: 600;
   font-size: 1rem;
   margin-top: 2rem;
+  margin-right: 10px;
   font-family: var(--text-font);
-  color: var(--accent-color)
+  color: var(--accent-color);
+
+  /* Fix whitespace overflow */
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
+
 
 @keyframes slideDownFade {
     0% {
